# openai-api-tester

./: README.md  dev.py  main.py  pyproject.toml  server.py
static/css/: main.css
static/js/: main.js
templates/: index.html
templates/partials/: get-request.html  post-request.html
