[project]
name = "openapi-api-tester"
version = "0.1.0"
description = "A tool designed to interact with APIs compatible with OpenAI's format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "htmx>=0.0.0",
    "pygments>=2.18.0",
    "uvicorn>=0.34.0",
]
